[package]
name = "mongoho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
mongodb = "=2.1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"]}
tokio-test = "0.4.2"
